@startuml
' ドメインモデル図: ゴールにペナルティと支払いを含めた構造を表現

package "User Context" {
  class "User" {
    + userId : number
    + name : string
    + email : string
  }

  class "Reward" {
    + rewardId : number
    + rewardDate : date
  }

  User --> Reward : "0..* receives"
}

package "Goal Context" {
  class "Goal" {
    + goalId : number
    + name : string
    + description : string
    + startDate : date
    + frequency : number
    + isCompleted : boolean
  }

  class "Penalty" {
    + penaltyId : number
    + amount : decimal
    + penaltyDate : date
    + isPaid : boolean
  }

  class "Payment" {
    + paymentId : number
    + amount : decimal
    + paymentDate : date
    + isPaid : boolean
  }

  class "RewardCondition" {
    + conditionId : number
    + conditionDetails : string
  }

  Goal --> Penalty : "1 may have 0..*"
  Penalty --> Payment : "1 triggers 1"
  Goal --> RewardCondition : "1 may have 0..1"
}

package "Progress Context" {
  class "Progress" {
    + progressId : number
    + goalId : number
    + date : date
    + comment : string
  }

  Progress --> Goal : "n relates to 1"
}

@enduml
